calc mostly done! still have to fix calc overflow when using large numbers

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@
 #screen {
     background-color:rgb(114, 126, 107);
     width:350px;
+    max-width:350px;
     height:100px;
     margin:auto;
     transform:translateY(25px);
@@ -53,7 +54,7 @@
     cursor:pointer;
 }
 
-.num, .func, .equals {
+#num, #func {
     background-color:black;
     border-radius:15px;
     color:white;
@@ -62,22 +63,64 @@
     line-height:75px;
     font-size:40px;
     font-family:'Orbitron', sans-serif;
+    user-select:none;
 }
 
-.num:hover, .func:hover, .equals:hover {
+#enter {
+    background-color:black;
+    border-radius:15px;
+    color:white;
+    text-align:center;
+    vertical-align:middle;
+    line-height:75px;
+    font-size:25px;
+    font-family:'Orbitron', sans-serif;
+    user-select:none;
+}
+
+#clear {
+    background-color:black;
+    border-radius:15px;
+    color:white;
+    text-align:center;
+    vertical-align:middle;
+    line-height:75px;
+    font-size:25px;
+    font-family:'Orbitron', sans-serif;
+    user-select:none;
+}
+
+#num:hover, #func:hover, #equals:hover {
     cursor:pointer;
     background-color:rgb(80, 77, 77);
 }
 
 #numline {
-    background-color:transparent;
+    background-color:none;
     width:325px;
+    max-width:325px;
     height:45px;
     margin:auto;
     vertical-align:middle;
-    transform:translateY(46px);
+    transform:translateY(4px);
     color:black;
     font-size:40px;
     text-align:right;
     font-family:'Orbitron', sans-serif;
+    user-select:none;
+}
+
+#register {
+    background-color:none;
+    width:325px;
+    max-width:325px;
+    height:45px;
+    margin:auto;
+    vertical-align:middle;
+    transform:translateY(5px);
+    color:black;
+    font-size:40px;
+    text-align:left;
+    font-family:'Orbitron', sans-serif;
+    user-select:none;
 }
